# System-Booking-Event

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  init.sh  nginx.conf  pyproject.toml
accounts/: authenticators.py  exceptions.py  managers.py  models.py  serializers.py  tasks.py  urls.py  validators.py  views.py
accounts/management/commands/: create_default_superuser.py
accounts/migrations/: 0001_initial.py
accounts/services/: auth.py  otp_service.py
bookings/: exceptions.py  models.py  tasks.py  urls.py
bookings/migrations/: 0001_initial.py
bookings/selectors/: event.py
bookings/serializers/: __init__.py  booking.py  event.py
bookings/services/: booking_service.py  event_service.py
bookings/states/: booking_context.py  booking_states.py
bookings/views/: __init__.py  booking.py  event.py
config/: base_task.py  celery.py  settings.py  urls.py
env/: postgres.env.example  rabbitmq.env.example
