[project]
name = "system-booking-event"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.3",
    "django>=6.0.7",
    "django-celery-beat>=2.9.0",
    "django-cors-headers>=4.9.0",
    "django-filter>=26.1",
    "django-redis>=7.0.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular[sidecar]>=0.30.0",
    "flower>=2.0.1",
    "gunicorn>=26.0.0",
    "psycopg2-binary>=2.9.12",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "redis>=8.0.1",
]

[dependency-groups]
dev = [
    "djangorestframework-stubs>=3.17.0",
    "pre-commit>=4.6.0",
]
